# one-shot-forex

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  forex-sentinel-master-spec.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: auto-pr.yml  sync.yml  trade.yml
api/: config-direct.js  config.js  hybrid-manage.js  live-positions.js  news-fetch.js  trigger-stream.js  trigger-sync.js  workflow-status.js
backend/: __main__.py  cli.py  main.py  server.py  sync.py
backend/analytics/: pnl.py
backend/backtest/: data_loader.py  engine.py  runner.py
backend/core/: config.py  database.py  models.py
backend/dashboard/: json_exporter.py
backend/data/: capitalcom_client.py  news_ingestor.py  oanda_client.py  price_ingestor.py  provider.py
backend/execution/: executor.py
backend/reviews/: exporter.py  generator.py  metrics.py  narratives.py  run_review.py
backend/risk/: risk_manager.py
backend/signals/: bias.py  challenge.py  instrument_mapper.py  llm_client.py  model_registry.py  relevance.py  signal_generator.py
backend/strategies/: base.py  breakout.py  carry.py  mean_reversion.py  momentum.py  registry.py  (+1 more)
config/: instruments.yaml  settings.yaml  streams.yaml
data/: config_overrides.json  sentinel.db
docs/: CHECKS.md  DATA_FLOW.md  PROJECT_OVERVIEW.md  RESEARCH.md  SESSIONS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
reviews/: SYSTEM_CONTEXT.md
scripts/: test_news.py
tests/: test_capitalcom_client.py  test_json_export.py  test_llm_client.py  test_risk.py  test_strategies.py
(+77 files in other folders)
